# terplounge-old

./: LICENSE  README.md
client/: practise.html  transcribe.html  websocket.html
client/assets/1/: de.txt
client/assets/2/: de.txt  en.txt  metadata.json
client/css/: main.css
client/img/: b.html  logo-small.xcf  logo.xcf
client/img/b_files/: crates-20230628-1.72.0-nightly-5bd28f5ea.js  rustdoc-2021-12-05.css
client/js/: microphone.js  practise.js  transcribe.js  transcription.js  websocket.js
docs/: components.xcf
scripts/: download-ggml-model.sh  local-server.py  send-raw.bash
server/: .env.sample  Cargo.toml  variables.el
server/src/: api.rs  compare.rs  error.rs  main.rs  queue.rs  session.rs  translate.rs  whispercpp.rs  whisperx.rs
server/templates/: compare.html  index.html
